add values of detuning coefficients

--- a/appendix/appendix.tex
+++ b/appendix/appendix.tex
@@ -168,5 +168,5 @@ of the lattice. %The actions later in time, even though they are considered inde
 %\end{itemize}
 
 
-\normalsize{\textbf{Rms detuning with amplitude from the SPS multiple errors at 270\,GeV}}\\
-
+\normalsize{\textbf{Rms betatron tune spread from the SPS multiple errors at 270\,GeV}}\\
+Here the rms betatron tune spread from the SPS multipole components in the SPS dipole magnets is calculated for beam energy of 270\,GeV. Using the values of the multipoles listed in Table~\ref{tab:sps_mult_270GeV} the corresponding detuning coefficients are obtained with MAD-X. In particular, $\axx$ = 148.391\,1/m, $\axy$ = $-$402.906\,1/m, $\ayy$ = $-$48.7\,1/m. It should be noted that these values are obtained for zero linear chromaticity in both transverse planes.
