--- a/appendix/appendix.tex
+++ b/appendix/appendix.tex
@@ -170,3 +170,5 @@ of the lattice. %The actions later in time, even though they are considered inde
 
 \normalsize{\textbf{Rms betatron tune spread from the SPS multiple errors at 270\,GeV}}\\
 Here the rms betatron tune spread from the SPS multipole components in the SPS dipole magnets is calculated for beam energy of 270\,GeV. Using the values of the multipoles listed in Table~\ref{tab:sps_mult_270GeV} the corresponding detuning coefficients are obtained with MAD-X. In particular, $\axx$ = 148.391\,1/m, $\axy$ = $-$402.906\,1/m, $\ayy$ = $-$48.7\,1/m. It should be noted that these values are obtained for zero linear chromaticity in both transverse planes.
+
+The tune spread is computed for the requested initial emittances for the emittance growth measurements of 2018 and 2021, $\emitx = \emity$ = 2
