--- a/main.tex
+++ b/main.tex
@@ -75,6 +75,8 @@
 \appendix
 \chapter{Appendix Title}
 \input{appendix/appendix}
+\chapter{Fundamentals of signal analysis and measurement}
+\input{appendix/appendix_b}
 \chapter{Glossary and defintions}
 \input{appendix/glossary}
 
