--- a/references.bib
+++ b/references.bib
@@ -389,3 +389,22 @@ Year = {2013},
 }
 
 
+@book{a_numerical_recipies,
+author = {Press, William H. and Teukolsky, Saul A. and Vetterling, William T. and Flannery, Brian P.},
+title = {Numerical Recipes: The Art of Scientific Computing},
+year = {2007},
+isbn = {0521880688},
+publisher = {Cambridge University Press},
+address = {USA},
+edition = {3},
+url = "http://www.e-maxx-ru.1gb.ru/bookz/files/numerical_recipes.pdf"
+}
+
+@book{FFT_and_applications,
+author = {R. Bracewel},
+title = {The Fourier Transform and its Applications},
+year = {1986},
+publisher = {McGraw-Hill},
+edition = {2}
+%p.40 and p.46
+}
