--- a/main.tex
+++ b/main.tex
@@ -2,6 +2,9 @@
 \usepackage{mypackages}
 \usepackage{listofsymbols}
 
+% Create new commands for convinience
+\newcommand{\fourierxform}[1]{\hat{#1}}
+\newcommand{\imagunit}{{i}}
 
 \begin{document}
 \frontmatter
