--- a/references.bib
+++ b/references.bib
@@ -408,3 +408,11 @@ publisher = {McGraw-Hill},
 edition = {2}
 %p.40 and p.46
 }
+
+@manual{numpy_fft,
+      title  = "NumPy API Documentation",
+      author = "NumPy Project and Community",
+      url    = "https://numpy.org/doc/stable/reference/routines.fft.html",
+      %year   = "2020",
+      note = "Accessed November 5, 2020"
+}
